# pyautodev

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
pyautodev/: checkers.py  linters.py  main.py  modifiers.py  processor.py  pyautodev.py  transformers.py
tests/: test_checkers.py  test_linters.py  test_modifiers.py  test_pyautodev.py  test_transformers.py
tests/data/: bad_continuation_tabs.blacked.py  bad_continuation_tabs.py  comment_overflow.py  comment_overflow.pyautodev.py
