[tool.poetry]
name = "pyautodev"
version = "0.1.0"
description = ""
authors = ["Drausin Wulsin <daedalus2718@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
libcst = "^0.1.3"
pylint = "^2.4"
pycodestyle = "^2.5"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
